--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
+  padding: 2% 5%;
+  background-color: #f3ecff;
+}
+
+.App * {
+  box-sizing: border-box;
+  display: grid;
 }
 
 .App-logo {
